Software/old/PumaTX_RC03_u2g8/Compilation error.txt
C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void loop()':

PumaTX_RC03:346:63: error: 'sbusPreparePacket' was not declared in this scope

         sbusPreparePacket(sbusPacket, rcChannels, false, false);

                                                               ^

C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void draw()':

PumaTX_RC03:623:93: error: a function-definition is not allowed here before '{' token

 void sbusPreparePacket(uint8_t packet[], int channels[], bool isSignalLoss, bool isFailsafe){

                                                                                             ^

PumaTX_RC03:669:1: error: expected '}' at end of input

 }

 ^

Plusieurs bibliothèque trouvées pour "WiFi.h"
Utilisé : C:\Users\Nicolas DG\AppData\Local\Arduino15\packages\esp32\hardware\esp32\1.0.3-rc1\libraries\WiFi
Non utilisé : C:\Program Files (x86)\Arduino\libraries\Stock_WiFi
exit status 1
'sbusPreparePacket' was not declared in this scope
